--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,24 +21,18 @@ jobs:
         run: mvn clean install
 
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v1
+
+      - uses: mr-smithers-excellent/docker-build-push@v5
+        name: Build & push Docker image
         with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+          image: reshmika1997/deploy-test
+          tags: v1, latest
+          registry: registry-url.io
+          dockerfile: Dockerfile.ci
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v1
 
-      - name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          context: ./
-          file: ./Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/simplewhale:latest
 
-      - name: Image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
+ 
+  
